# example-voting-app

./: .gitignore  Taskfile.yml  docker-compose.yaml
.github/actions/setup-dependencies/: action.yml
.github/utils/: file-filters.yml
.github/workflows/: build-push-1.yml  build-push.yml  test.yml
result/: Dockerfile  Taskfile.yml  package-lock.json  package.json  server.js
result/tests/: example.test.js
seed-data/: Dockerfile  Taskfile.yml
utils/: Taskfile.yml
vote/: Dockerfile  Taskfile.yml  app.py  pyproject.toml
worker/: Dockerfile  Program.cs  Taskfile.yml  Worker.csproj
